--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,8 @@
 name: Events Demo 1
-on: ...
+on:
+  pull_request:
+    types: [opened, edited]
+  workflow_dispatched:
 jobs:
   deploy:
     runs-on: ubuntu-latest
