--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -2,7 +2,7 @@ name: Events Demo 1
 on:
   pull_request:
     types: [opened, edited]
-  workflow_dispatched:
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
